@@ -35,6 +35,7 @@
 #include <stdlib.h>
 #include <string.h>
 
+#include "common.h"
 #include "filename.h"
 
 typedef enum
